# peertrader-backend

./: .gitignore  LICENSE  README.md  peertrader-backend.cabal
bench/: RunBench.hs
sql/: createtables.sql  newterms.sql
src/: Application.hs  Ops.hs  P2PPicks.hs  PeerTrader.hs  Site.hs  Web.hs
src/Control/Monad/: Util.hs
src/P2PPicks/: Keys.hs  Request.hs  Types.hs
src/PeerTrader/: Account.hs  Admin.hs  Database.hs  NewUser.hs  Ops.hs  P2PPicks.hs  Splices.hs  Strategy.hs  StrategyManagement.hs  StrategyType.hs  Types.hs
src/PeerTrader/Account/: Account.hs  Handler.hs  Statistics.hs  Web.hs
src/PeerTrader/Admin/: Database.hs  Statistics.hs
src/PeerTrader/AutoFilter/: AutoFilter.hs  Range.hs
src/PeerTrader/Investment/: Database.hs
src/PeerTrader/P2PPicks/: Account.hs  Result.hs
src/PeerTrader/Prosper/: Account.hs  Listing.hs
src/PeerTrader/Route/: AutoFilter.hs  P2PPicks.hs  P2PPicksAccount.hs  ProsperAccount.hs  Statistics.hs  StrategyManagement.hs  StreamData.hs  User.hs
src/PeerTrader/Schedule/: Ops.hs  Web.hs
src/PeerTrader/Socket/: Activity.hs  Command.hs  Ops.hs  Web.hs
src/PeerTrader/Strategy/: JSON.hs  Schedule.hs  Strategy.hs
src/PeerTrader/StrategyManagement/: ActiveStrategy.hs  SelectStrategy.hs
src/Snap/Snaplet/: P2PPicks.hs
src/System/IO/Streams/: Serialize.hs  Util.hs
test/: P2PPicksTest.hs  RunTests.hs
